[package]
name = "boolean_threshold_network"
version = "0.1.0"
edition = "2021"

[build-dependencies]
prost-build = "0.13.5"

[dependencies]
rayon      = "1.10.0"    # data-parallelism
sprs       = "0.11.3"
chrono     = "0.4.41"   # sparse linear algebra
rand       = "0.9.1"
rand_distr = "0.5.1"
clap = { version = "4.5.38", features = ["derive"] }
anyhow = "1.0.98"
prost = "0.13"
# Only necessary if using Protobuf well-known types:
prost-types = "0.13"
rootfinder = "0.3.2"
glob = "0.3.2"
itertools = "0.14.0"
average = "0.16.0"
csv = "1.3.1"
log = "0.4.27"

[profile.release]
lto = true

