################# BEGIN trajectories ####################

add_executable(trajectories trajectories.cc)
target_link_libraries(trajectories PRIVATE network gflags::gflags prettyprint OpenMP::OpenMP_CXX)

# Cross-platform compiler lints
if (${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang"
        OR ${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
    target_compile_options(trajectories PRIVATE
            -Wall
            -Wextra
            -Wswitch
            -Wconversion
            -Wparentheses
            -Wfloat-equal
            -Wzero-as-null-pointer-constant
            -Wpedantic
            -pedantic
            -pedantic-errors)
elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL "MSVC")
    target_compile_options(trajectories PRIVATE
            /W3)
endif ()

################# END trajectories ####################
